# SPLProject1

./: CMakeLists.txt  README.md  input.txt  makefile  rp.sh
Skeleton/: makefile
Skeleton/.devcontainer/: devcontainer.json
Skeleton/Skeleton/: configFileExample.txt  makefile
Skeleton/Skeleton/include/: Action.h  Beneficiary.h  MedicalWarehouse.h  SupplyRequest.h  Volunteer.h
Skeleton/Skeleton/src/: Action.cpp  Beneficiary.cpp  MedicalWarehouse.cpp  SupplyRequest.cpp  Volunteer.cpp  main.cpp  mainDraft  mainDraft.cpp
